--- a/assets/css/flatize.css
+++ b/assets/css/flatize.css
@@ -2950,6 +2950,7 @@ blockquote {
   line-height: 24px;
   position: relative;
   letter-spacing: 1px;
+  border: 1px solid #e7e7e7;
   padding: 0 40px 0 40px;
   text-align: center;
   white-space: nowrap;
